// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`literalValueTokenizer should expect double-quoted expressions 1`] = `
Object {
  "endIdx": 5,
  "startIdx": 0,
  "type": "LiteralValue",
  "value": "Test",
}
`;

exports[`literalValueTokenizer stringLiteralSubTokenizer should not break on escaped quotes 1`] = `
Object {
  "endIdx": 9,
  "startIdx": 0,
  "type": "LiteralValue",
  "value": "\\\\'Test\\\\'",
}
`;

exports[`literalValueTokenizer stringLiteralSubTokenizer should not break on other-numbered quotes 1`] = `
Object {
  "endIdx": 6,
  "startIdx": 0,
  "type": "LiteralValue",
  "value": "\\"Test",
}
`;

exports[`literalValueTokenizer stringLiteralSubTokenizer should return error on unbounded string literal 1`] = `
Object {
  "endIdx": 8,
  "message": "Unbounded string literal",
  "startIdx": 0,
  "type": "Error",
}
`;

exports[`literalValueTokenizer stringLiteralSubTokenizer should tokenize bounded double-quote string literal 1`] = `
Object {
  "endIdx": 5,
  "startIdx": 0,
  "type": "LiteralValue",
  "value": "Test",
}
`;

exports[`literalValueTokenizer stringLiteralSubTokenizer should tokenize bounded single-quote string literal 1`] = `
Object {
  "endIdx": 5,
  "startIdx": 0,
  "type": "LiteralValue",
  "value": "Test",
}
`;
